--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Duy Anh Vu</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
@@ -23,8 +23,8 @@
             </div>
     
             <div class="overlay nav">
-                <a href="/public/cv1">CV 1</a>
-                <a href="/public/cv2">CV 2</a>
+                <a href="./cv1">CV 1</a>
+                <a href="./cv2">CV 2</a>
                 <a href="" onclick="whyTho()">Homepage</a>
             </div>
         </div>
@@ -37,6 +37,6 @@
         </div>
     </div>
 </body>
-<script src="script.js"></script>
+<script src="./script.js"></script>
 
 </html>
