--- a/cv1/index.html
+++ b/cv1/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Duy Anh CV</title>
 
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="https://toronto966.github.io/duyanhv/cv1/style.css">
 	</head>
 	<body>
 		<div class="container">
