--- a/cv2/index.html
+++ b/cv2/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>CV</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="https://toronto966.github.io/duyanhv/cv2/style.css">
 	</head>
 	
 	<body>
@@ -43,9 +43,9 @@
 		<div class="footer_div">
 			<p>Somethin Somethin by DuyAnhV</p>
 
-			<a href=""><img src="./assets/fb.png" href="fb.com" alt=""></a>
-			<a href=""><img src="./assets/twitter.png" alt=""></a>
-			<a href=""><img src="./assets/insta.png" alt=""></a>
+			<a href=""><img src="https://toronto966.github.io/duyanhv/cv2/assets/fb.png" href="fb.com" alt=""></a>
+			<a href=""><img src="https://toronto966.github.io/duyanhv/cv2/assets/twitter.png" alt=""></a>
+			<a href=""><img src="https://toronto966.github.io/duyanhv/cv2/assets/insta.png" alt=""></a>
 		</div>
 	</body>
 </html>
