--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Duy Anh Vu</title>
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://toronto966.github.io/duyanhv/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://toronto966.github.io/duyanhv/script.js">
 </head>
 <body>
     <div class="wrapper">
@@ -23,8 +24,8 @@
             </div>
     
             <div class="overlay nav">
-                <a href="./cv1">CV 1</a>
-                <a href="./cv2">CV 2</a>
+                <a href="https://toronto966.github.io/duyanhv/cv1/index.html">CV 1</a>
+                <a href="https://toronto966.github.io/duyanhv/cv2/index.html">CV 2</a>
                 <a href="" onclick="whyTho()">Homepage</a>
             </div>
         </div>
@@ -37,6 +38,6 @@
         </div>
     </div>
 </body>
-<script src="./script.js"></script>
+<!-- <script src="./script.js"></script> -->
 
 </html>
