--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://toronto966.github.io/duyanhv/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="https://toronto966.github.io/duyanhv/script.js">
+    
 </head>
 <body>
     <div class="wrapper">
@@ -39,5 +39,5 @@
     </div>
 </body>
 <!-- <script src="./script.js"></script> -->
-
+<script src="https://toronto966.github.io/duyanhv/script.js"></script>
 </html>
