--- a/index.html
+++ b/index.html
@@ -36,6 +36,30 @@
         <div class="mainpage_img">
 
         </div>
+
+        <div class="first_content">
+            <div class="first_content about">
+                <p>Something something</p>
+            </div>
+
+            <div class="first_content about" id="about1_id">
+                <p>Something something</p>
+            </div>
+
+             <div class="first_content about" id="about2_id">
+                <p>Something something</p>
+            </div>
+
+            <div class="first_content img">
+                
+            </div>
+        </div>
+
+        <div class="second_content">
+            <div>
+                
+            </div>
+        </div>
     </div>
 </body>
 <!-- <script src="./script.js"></script> -->
