--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Duy Anh Vu</title>
-
+	<link href="https://twitchemotes.com/favicon.png" rel="shortcut icon" type="image/png">
     <link rel="stylesheet" href="https://toronto966.github.io/duyanhv/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
     
 </head>
 <body>
