--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </div>
     
             <div class="overlay nav">
-                <a href="/public/cv1">CV 1</a>
-                <a href="/public/cv2">CV 2</a>
+                <a href="./cv1/index.html">CV 1</a>
+                <a href="./cv2/index.html">CV 2</a>
                 <a href="" onclick="whyTho()">Homepage</a>
             </div>
         </div>
