--- a/cv2/index.html
+++ b/cv2/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>CV</title>
-		<link rel="stylesheet" href="https://toronto966.github.io/duyanhv/cv2/style.css">
+		<link rel="stylesheet" href="./style.css">
 	</head>
 	
 	<body>
