--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://twitchemotes.com/favicon.png" rel="shortcut icon" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 <body>
     <div class="wrapper">
@@ -39,7 +41,7 @@
         </div>
 
         <div class="first_content">
-            <div class="first_content about">
+            <div class="first_content about" id="about1">
                 <p>Something something</p>
             </div>
 
@@ -51,7 +53,7 @@
                 <p>Something something</p>
             </div>
 
-            <div class="first_content img">
+            <div class="first_content img" id="first_content_img">
                 
             </div>
         </div>
