--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 
         <div class="second_content">
             <div>
-
+                <h1>Skill</h1>
+                <br><br><br><br>
+                <p>java</p> <span id="span1"><span id="span2"></span></span>
             </div>
         </div>
     </div>
