--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </div>   
         <div id="overlay_id" class="overlay">
             
-            <div class="overlay about">
+            <div class="overlay about" id="overlay_about">
                 <h3>About DuyAnhV</h3>
                 <p>Something something...</p>
             </div>
     
-            <div class="overlay nav">
+            <div class="overlay nav" id="overlay_nav">
                 <a href="./cv1/index.html">CV 1</a>
                 <a href="./cv2/index.html">CV 2</a>
                 <a href="" onclick="whyTho()">Homepage</a>
