--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="overlay nav" id="overlay_nav">
                 <a href="./cv1/index.html">CV 1</a>
                 <a href="./cv2/index.html">CV 2</a>
+                <a href="./boostrap/index.html">Boostrap</a>
                 <a href="" onclick="whyTho()">Homepage</a>
             </div>
         </div>
@@ -59,10 +60,13 @@
         </div>
 
         <div class="second_content">
-            <div>
-                <h1>Skill</h1>
-                <br><br><br><br>
+            <div class="wrapper">
+                <h1>Skills</h1>
+                <p>java</p> <span id="span1"><span id="span2"></span></span><br>
+                <p>java</p> <span id="span1"><span id="span2"></span></span><br>
+                <p>java</p> <span id="span1"><span id="span2"></span></span><br>
                 <p>java</p> <span id="span1"><span id="span2"></span></span>
+
             </div>
         </div>
     </div>
